Fix padding on small devices

--- a/src/components/TimeAndSalary/common/injectHideContentBlock.module.css
+++ b/src/components/TimeAndSalary/common/injectHideContentBlock.module.css
@@ -11,10 +11,10 @@ td.cell {
     bottom: 13px;
     display: flex;
     @media (max-width: below-small) {
-      top: 0;
+      top: 3px;
       left: 120px;
-      right: 0;
-      bottom: 0;
+      right: 3px;
+      bottom: 3px;
     }
   }
 
